# AI-Commit

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  README.md  RELEASE.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
docs/: release-notes-playground.txt
scripts/: wait-gh-run.ps1
src/: cli.rs  config.rs  git.rs  main.rs  prompt.md  prompt.rs  provider.rs
