[package]
name = "ai-commits"
version = "0.1.0"
authors = ["Mateus Junior <mateus@matj.dev>"]
edition = "2024"
description = "Generate semantic git commit messages from repository context using an AI provider."
license = "MIT"
repository = "https://github.com/falleng0d/AI-Commit"
homepage = "https://github.com/falleng0d/AI-Commit"
readme = "README.md"
keywords = ["git", "commit", "cli", "ai"]
categories = ["command-line-utilities", "development-tools"]
include = ["src/**", "Cargo.toml", "Cargo.lock", "README.md", "CHANGELOG.md", "LICENSE"]

[[bin]]
name = "ai-commit"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.39", features = ["derive"] }
dirs = "6.0.0"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"

[dev-dependencies]
tempfile = "3.27.0"
